<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/lay_title_medicalhistory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toptitle_height"
            android:background="@color/kaurihealth_header_background">

            <ImageView
                android:id="@+id/iv_back"
                style="@style/toptitleback" />

            <TextView
                style="@style/toptitletv"
                android:text="设置密码" />

            <TextView
                android:id="@+id/tv_submit"
                style="@style/toptitleedit"
                android:text="完成"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <TextView
            style="@style/line_mine"
            android:layout_marginTop="0dp" />

        <RelativeLayout
            style="@style/rlay_open_an_account"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/tv1"
                style="@style/tv1_open_an_account"
                android:layout_width="90dp"
                android:text="设置新密码:" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/content_open_an_account"
                android:layout_toRightOf="@id/tv1"
                android:background="@null"
                android:hint="请输入6位字符以上"
                android:inputType="textPassword"
                android:textColorHint="@color/apptextts" />
        </RelativeLayout>

        <TextView
            style="@style/line_mine"
            android:layout_marginTop="0dp" />

        <RelativeLayout
            style="@style/rlay_open_an_account"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/tv2"
                style="@style/tv1_open_an_account"
                android:layout_width="90dp"
                android:text="确认新密码:" />

            <EditText
                android:id="@+id/edt_confirmpassword"
                style="@style/content_open_an_account"
                android:layout_toRightOf="@id/tv2"
                android:background="@null"
                android:hint="请再次确认"
                android:inputType="textPassword"
                android:textColorHint="@color/apptextts" />

        </RelativeLayout>

        <TextView
            style="@style/line_mine"
            android:layout_marginTop="0dp" />


        <TextView
            android:id="@+id/tv_errorpassword"
            style="@style/error_register"
            android:text="@string/password_register" />

        <TextView
            android:id="@+id/tv_errorconfirmpassword"
            style="@style/error_register"
            android:text="@string/confirm_password_register" />

        <TextView
            android:id="@+id/tv_errorsubmit"
            style="@style/error_register"
            android:text="@string/submit_error" />

    </LinearLayout>

</ScrollView>